# python-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .flake8  .gitignore  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: {{cookiecutter.project_slug}}.py
