[tool.poetry]
name = "python-template"
version = "1.0.0"
description = "A cookiecutter for Python projects"
authors = ["Luke Clark Andrada <lcmandrada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
